tests/negative/gold/import_parser_test.gold
tests/negative/import_parser_test.toit:5:7: error: Incomplete import clause
import
      ^
Compilation failed.
